prod-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Healthcare-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Healthcare-app
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: Healthcare-app
        module: pharmacy
        tier: frontend
        track: stable
    spec:
      containers:
        - image: johnolami/medblocks-healthcare
          imagePullPolicy: IfNotPresent
          name: Healthcare-app
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 25m
              memory: 256Mi
