prod-deployment/key.yaml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata:
    name: "keycloak-development"
    namespace: "development"
  spec:
    selector:
      matchLabels:
        app: "keycloak-development"
    replicas: 1
    strategy:
      type: "RollingUpdate"
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
    minReadySeconds: 5
    template:
      metadata:
        labels:
          app: "keycloak-development"
      spec:
        containers:
          -
            name: "keycloak-development"
            image: "quay.io/keycloak/keycloak:8.0.2"
            imagePullPolicy: "Always"
            ports:

              - name: "http"
                containerPort: 8080

              - name: "https"
                containerPort: 8443
            readinessProbe:
               httpGet:
                 path: "/auth/realms/master"
                 port: 8080
