prod-deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: Healthcare-app
  name: Healthcare-app
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: Healthcare-app
  type: ClusterIP
